# theoretical-neuroscience

./: .gitignore
docs/: mkdocs.yml
docs/docs/: 03_Neural_Decoding.md  10_Representational_Learning.md  1_Neural_Encoding_I.md  2_Neural_Encoding_II.md  4_Information_Theory.md  7_Network_Models.md  9_Classical_Conditioning_and_Reinforcement_Learning.md  index.md
docs/docs/2005_Theoretical_Neuroscience_Dayan/: 01_Neural_Encoding_I.md  02_Neural_Encoding_II.md  07_Network_Models.md  08_Plasticity_and_Learning.md  09_Classical_Conditioning_and_Reinforcement_Learning.md
docs/docs/2026_Embodied_AI/papers/: 01_Spatial_Intelligence_Survey.md  02_D4RT_DeepMind.md
docs/docs/2026_SOTA_LLM/: 01_2017_Transformer.md  01_Embeddings.md
docs/docs/2026_SOTA_LLM/papers/: 01_Attention_Is_All_You_Need.md  02_ViT_Vision_Transformer.md  03_CLIP_Contrastive_Language_Image_Pretraining.md  05_Qwen3-VL_Technical_Report.md  06_The_Big_LLM_Architecture_Comparison.md  07_DeepSeek-V3_Technical_Report.md
docs/docs/js/: katex.js  main.css
python/: pyproject.toml
python/src/neu_ai/llm2026/: m1_2019_GPT2.py
python/src/neu_ai/llm2026/archives/: m1_embeddings.py
python/src/theoretical_neuroscience/: m1_neural_encoding.py  m9_reinforcement_learning.py  plot.py  utils.py
python/tests/: cut_pdf.py  m8_plasticity_and_learning.py  test.py
