[project]
authors = [{name = "Ricky Ding", email = "e0134117@u.nus.edu"}]
name = "theoretical-neuroscience"
version = "0.0.1"
description = "???"
dependencies = [
    "jax",
    "matplotlib",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = "3.11.*"
python-build = "*"
twine = "*"
black = "*"
isort = "*"
flake8 = "*"

[tool.pixi.pypi-dependencies]
theoretical-neuroscience = { path = ".", editable = true }

[tool.pixi.tasks]
build = "python -m build"
publish = "python -m twine upload dist/*"
test = "pytest tests/"
clean = "isort . --skip .pixi && black . --exclude .pixi && flake8 . --exclude .pixi"
