[project]
authors = [{name = "Ricky Ding", email = "e0134117@u.nus.edu"}]
name = "neu-ai"
version = "0.0.1"
description = "NeuroAI Research"
dependencies = [
    "jax",
    "optax",
    "flax",
    "matplotlib",
    "opencv-python",
    "pypdfium2",
    "transformers", 
    "torch",
    "torchvision",
    "accelerate",
    "tiktoken",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
python = "3.12.*"
python-build = "*"
twine = "*"
black = "*"
isort = "*"
flake8 = "*"

[tool.pixi.pypi-dependencies]
neu-ai = { path = ".", editable = true }
gemma = { git = "https://github.com/google-deepmind/gemma.git" }
dialog = { git = "https://github.com/google-deepmind/dialog.git" }

[tool.pixi.tasks]
build = "rm -rf dist/ && python -m build"
publish = "python -m twine upload dist/*"
test = "pytest tests/"
clean = "isort . --skip .pixi && black . --exclude .pixi && flake8 . --exclude .pixi --ignore=E501,E203,E741,W605"
